refactor AnimalTest upgrade .gitignore