@@ -14,10 +14,12 @@ public class AnimalTest {
 
     private final String animalKind;
     private final List<String> food;
+    private final Animal animal;
 
     public AnimalTest(String animalKind, List<String> food) {
         this.animalKind = animalKind;
         this.food = food;
+        this.animal = new Animal();
     }
 
     @Parameterized.Parameters
@@ -25,26 +27,24 @@ public class AnimalTest {
         return new Object[][] {
                 {"Травоядное", Arrays.asList("Трава", "Различные растения")},
                 {"Хищник", Arrays.asList("Животные", "Птицы", "Рыба")},
-                {"Млекопитающие", Arrays.asList("Неизвестный вид животного, используйте значение Травоядное или Хищник")}
+                {"Млекопитающие", List.of("Неизвестный вид животного, используйте значение Травоядное или Хищник")}
         };
     }
 
     @Test
     public void getFoodTest(){
-        Animal animal = new Animal();
         List<String> excepted = food;
-        List<String> actual = null;
+        List<String> actual;
         try {
             actual = animal.getFood(animalKind);
         } catch (Exception e) {
-            actual = Arrays.asList(e.getMessage());
+            actual = List.of(e.getMessage());
         }
 
         assertEquals(excepted, actual);
     }
     @Test
     public void getFamilyTest(){
-        Animal animal = new Animal();
         String excepted = "Существует несколько семейств: заячьи, беличьи, мышиные, кошачьи, псовые, медвежьи, куньи";
         String actual = animal.getFamily();
         assertEquals(excepted, actual);
